# langdetect-core

./: .gitignore  CMakeLists.txt  README.md  overview.txt  pyproject.toml
app/: langdetect_cli.cpp
benchmarks/: bench_detector.cpp
corpora/raw/: de.txt  en.txt  es.txt  fr.txt  it.txt
include/langdetect/: detector.hpp  result.hpp  script.hpp  utf8.hpp
profiles/: de.json  en.json  es.json  fr.json  it.json
python/: bindings.cpp
src/: detector.cpp  utf8.cpp
tests/: test_detector.cpp  test_utf8.cpp
tools/: build_profile.py  evaluate_profiles.py  requirements.txt  scrape_corpus.py
